# linkerd2

./: .deepsource.toml  .dockerignore  .editorconfig  .gcp.json.enc  .gdb_history  .gitattributes  .gitignore  .golangci.yml  .helmdocsignore  .markdownlint.yaml  .prometheus.dev.yml  .proxy-init-version  .proxy-version  .rustfmt.toml  .tiltignore  .travis.rsa.enc  .travis.yml  ADOPTERS.md  AGENTS.md  AMBASSADORS.md  BUILD.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO  Dockerfile-base  Dockerfile-debug  Dockerfile-go-deps  Dockerfile-proxy  Dockerfile-proxy-init  Dockerfile-proxy-windows  Dockerfile.controller  Dockerfile.load-controller  Dockerfile.proxy  EXTENSIONS.md  GOVERNANCE.md  Gopkg.toml  MAINTAINERS.md  README.md  (+52 more)
chigger/: Cargo.toml
chigger/src/: destination.rs  lib.rs  main.rs
cni-plugin/linkerd-cni-validation/: Cargo.toml  amd64.dockerfile  arm.dockerfile  arm64.dockerfile
cni-plugin/linkerd-cni-validation/src/: main.rs
cni-plugin/linkerd-cni-validator/: Cargo.toml  amd64.dockerfile  arm.dockerfile  arm64.dockerfile
cni-plugin/linkerd-cni-validator/src/: main.rs
cni-validator/: Cargo.toml  amd64.dockerfile  arm.dockerfile  arm64.dockerfile
cni-validator/src/: main.rs
ns-labeler/: Cargo.toml  Dockerfile
ns-labeler/src/: main.rs
policy-controller/: Cargo.toml  Dockerfile  admission.crt  admission.key  amd64.dockerfile  arm.dockerfile  arm64.dockerfile  ca.crt  ca.key  deny.toml
policy-controller/core/: Cargo.toml
policy-controller/core/src/: http_route.rs  identity_match.rs  inbound.rs  lib.rs  network_match.rs  outbound.rs  routes.rs
policy-controller/grpc/: Cargo.toml
policy-controller/grpc/src/: http_route.rs  inbound.rs  lib.rs  metrics.rs  outbound.rs  routes.rs  workload.rs
policy-controller/k8s/api/: Cargo.toml
policy-controller/k8s/index/: Cargo.toml
policy-controller/k8s/status/: Cargo.toml
policy-controller/k8s/status-controller/: Cargo.toml
policy-controller/runtime/: Cargo.toml
policy-controller/runtime/src/: admission.rs  args.rs  lease.rs  lib.rs
policy-controller/src/: admin.rs  admission.rs  cli.rs  index_list.rs  index_pair.rs  lib.rs  main.rs  validation.rs
policy-test/: Cargo.toml  README.md
policy-test/src/: admission.rs  bb.rs  curl.rs  grpc.rs  lib.rs  nginx.rs  outbound_api.rs  rt.rs  test_route.rs  web.rs
policy-test/tests/: accepted_http_route_status.rs  admit_authorization_policy.rs  admit_egress_networks.rs  admit_gateway_grpc_route.rs  admit_gateway_http_route.rs  admit_grpc_route.rs  admit_http_local_ratelimit_policy.rs  admit_http_route.rs  admit_http_route_gateway.rs  admit_linkerd_http_route.rs  admit_meshtls_authentication.rs  admit_network_authentication.rs  admit_server.rs  admit_server_authorization.rs  admit_tcp_route.rs  admit_tls_route.rs  admit_unmeshed_networks.rs  api.rs  e2e_appprotocol.rs  e2e_audit.rs  e2e_authorization_policy.rs  e2e_egress_network.rs  e2e_failure_accrual.rs  e2e_grpc_routing.rs  e2e_http_local_ratelimit_policy.rs  e2e_http_routing.rs  e2e_server_authorization.rs  inbound_api.rs  inbound_api_external_workload.rs  inbound_grpc_route_status.rs  inbound_http_route_status.rs  outbound_api.rs  outbound_api_app_protocol.rs  outbound_api_egress_network.rs  outbound_api_failure_accrual.rs  outbound_api_gateway.rs  outbound_api_gateway_grpc.rs  outbound_api_gateway_http.rs  outbound_api_grpc.rs  outbound_api_http.rs  (+5 more)
proxy/: .empty.rs  Cargo.toml  Dockerfile  Dockerfile-deps  Dockerfile-e  Dockerfile-e-e  Dockerfile-e-e-e  Dockerfile-test  assert_macro  build.rs
proxy/benches/: record.rs
proxy/controller-grpc/: Cargo.toml  build.rs
proxy/controller-grpc/src/: arbitrary.rs  convert.rs  lib.rs
proxy/convert/: Cargo.toml
proxy/futures-mpsc-lossy/: Cargo.toml
proxy/grpc/: Cargo.toml
proxy/grpc/src/: lib.rs
proxy/prometheus/: Cargo.toml  build.rs
proxy/prometheus-export/: Cargo.toml  build.rs
proxy/prometheus-export/src/: lib.rs
proxy/prometheus/src/: lib.rs
proxy/router/: Cargo.toml
proxy/router/src/: cache.rs  lib.rs
proxy/src/: accept_policy.rs  app.rs  bind.rs  conditional.rs  config.rs  connection.rs  convert.rs  dns.rs  drain.rs  fs_watch.rs  fully_qualified_authority.rs  http_active.rs  inbound.rs  lib.rs  logging.rs  main.rs  map_err.rs  now.rs  outbound.rs  rng.rs  signal.rs  stream.rs  task.rs  time.rs  timeout.rs  tower_fn.rs  watch_service.rs
proxy/src/control/: accept_policy.rs  cache.rs  codec.rs  discovery.rs  fully_qualified_authority.rs  mod.rs  observe.rs  pb.rs  remote_stream.rs  telemetry.rs  util.rs
proxy/src/ctx/: http.rs  mod.rs  transport.rs
proxy/src/telemetry/: control.rs  event.rs  metrics.rs  mod.rs
proxy/src/transparency/: client.rs  glue.rs  h1.rs  mod.rs  protocol.rs  server.rs  tcp.rs  upgrade.rs
proxy/src/transport/: addr_info.rs  connect.rs  io.rs  mod.rs  prefixed.rs  so_original_dst.rs  tls.rs
proxy/tests/: discovery.rs  shutdown.rs  telemetry.rs  transparency.rs
proxy/tests/support/: client.rs  controller.rs  mod.rs  proxy.rs  server.rs  tcp.rs  timer.rs
proxy/tower-router/: Cargo.toml
tap/: Cargo.toml
tap/src/: main.rs
test/destination-test/: Cargo.toml  Dockerfile  README.md  helmfile.yaml.gotmpl
test/destination-test/chart/: Chart.yaml  README.md  values.yaml
test/destination-test/dst-load-controller/: Cargo.toml
test/destination-test/hack/: gen-certs.sh  kwok-node.yaml
test/destination-test/values/: README.md  kube-prometheus-stack.yaml  linkerd-monitoring.yaml
tower-grpc/: Cargo.toml
tower-grpc-examples/: Cargo.toml  README.md  build.rs
tower-grpc-examples/src/: helloworld.rs  route_guide.rs
tower-grpc-examples/src/routeguide/: data.rs  main.rs
tower-grpc/examples/: greeter_client.rs  greeter_server.rs  helloworld_server.rs  routeguide_client.rs  routeguide_server.rs
tower-grpc/src/: error.rs  lib.rs  request.rs  response.rs  status.rs
tower-grpc/src/client/: codec.rs  mod.rs
tower-grpc/src/protobuf/: mod.rs
tower-h2/: Cargo.toml  README.md
tower-h2/examples/: client.rs  server.rs
tower-h2/src/: body.rs  flush.rs  lib.rs  recv_body.rs
(+2732 files in other folders)
