[workspace]
resolver = "2"
members = [
    "policy-controller",
    "policy-controller/core",
    "policy-controller/grpc",
    "policy-controller/k8s/api",
    "policy-controller/k8s/index",
    "policy-controller/k8s/status",
    "policy-controller/runtime",
    "policy-test",
]

[profile.release]
lto = "thin"

[workspace.dependencies]
gateway-api = "0.15"
http = "1"
hyper = "1"
hyper-util = { version = "0.1", default-features = false, features = ["tracing"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
kube = { version = "0.99", default-features = false }
kubert = { version = "0.24", default-features = false }
prometheus-client = { version = "0.23", default-features = false }
tonic = { version = "0.12", default-features = false }
tower = { version = "0.5", default-features = false }

[workspace.dependencies.linkerd2-proxy-api]
version = "0.16.0"
features = ["inbound", "outbound"]
