[package]
name = "chigger"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
drain = "0.1"
futures = { version = "0.3", default-features = false }
k8s-openapi = { version = "0.19", features = ["v1_20"] }
hyper = { version = "0.14", features = ["http1", "http2", "runtime", "server"] }
maplit = "1"
openssl = { version = "0.10.55", features = ["vendored"] }
parking_lot = "0.12"
rand = "0.8"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"

[dependencies.clap]
version = "4"
default-features = false
features = ["derive", "env", "usage", "std"]

[dependencies.kube]
version = "0.85"
default-features = false
features = ["client", "openssl-tls", "runtime", "ws"]

[dependencies.kubert]
version = "0.18"
default-features = false
features = [
    "clap",
    "metrics",
    "runtime",
]

[dependencies.linkerd2-proxy-api]
version = "0.11"
features = ["destination"]

[dependencies.tokio]
version = "1"
features = ["macros", "parking_lot", "rt", "rt-multi-thread", "signal"]

[dependencies.tonic]
version = "0.8"
default-features = false
features = ["transport"]

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator = "0.5"
