[package]
name = "ns-labeler"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[features]
default = ["openssl-tls", "openssl-vendored"]
openssl-tls = ["kube/openssl-tls"]
# Vendor openssl to statically link lib
openssl-vendored = ["openssl/vendored"]

[dependencies]
anyhow = "1"
json-patch = "0.3"
kubert = { version = "0.13", features = ["log"] }
openssl = { version = "0.10", optional = true }
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
thiserror = "1"
tracing = "0.1"

[dependencies.clap]
version = "4"
default-features = false
features = ["derive", "help", "usage", "env", "std"]

[dependencies.kube]
version = "0.78"
default-features = false
features = ["client", "jsonpatch"]

[dependencies.k8s-openapi]
version = "0.17"
features = ["v1_21"]

[dependencies.tokio]
version = "1"
features = ["macros"]
