[package]
name = "linkerd-policy-controller"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
rustls = { version = "0.23.34", default-features = false, features = ["aws-lc-rs"] }

[dependencies.linkerd-policy-controller-runtime]
workspace = true

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator = "0.5"
