[package]
name = "linkerd-policy-test"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
hyper = { version = "0.14", features = ["client", "http2"] }
futures = { version = "0.3", default-features = false }
ipnet = "2"
k8s-gateway-api = "0.8"
k8s-openapi = { version = "0.16", features = ["v1_20"] }
linkerd-policy-controller-core = { path = "../policy-controller/core" }
linkerd-policy-controller-k8s-api = { path = "../policy-controller/k8s/api" }
linkerd2-proxy-api = { version = "0.7", features = ["inbound"] }
maplit = "1"
rand = "0.8"
serde = "1"
serde_json = "1"
schemars = "0.8"
tonic = { version = "0.8", default-features = false }
tokio = { version = "1", features = ["macros", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.kube]
version = "0.76"
default-features = false
features = ["client", "openssl-tls", "runtime", "ws"]

[dev-dependencies]
tokio-test = "0.4"
