[package]
name = "linkerd-policy-test"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
bytes = "1"
http-body-util = "0.1"
hyper = { workspace = true, features = ["client", "http2"] }
hyper-util = { version = "0.1" }
futures = { version = "0.3", default-features = false }
ipnet = "2"
k8s-gateway-api = { workspace = true }
k8s-openapi = { workspace = true }
linkerd-policy-controller-core = { path = "../policy-controller/core" }
linkerd-policy-controller-k8s-api = { path = "../policy-controller/k8s/api" }
linkerd-policy-controller-grpc = { path = "../policy-controller/grpc" }
maplit = "1"
rand = "0.9"
serde = "1"
serde_json = "1"
schemars = "0.8"
tonic = { workspace = true }
tokio = { version = "1", features = ["macros", "rt"] }
tower = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.kube]
workspace = true
default-features = false
features = ["client", "openssl-tls", "runtime", "ws"]

[dependencies.linkerd2-proxy-api]
workspace = true
features = ["inbound", "outbound"]

[dev-dependencies]
tokio-test = "0.4"
regex = "1"
