[package]
name = "conduit-proxy"
version = "0.3.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
publish = false

[features]
default = ["flaky_tests"]
# Disable to skip certain tests that should not be run on CI.
flaky_tests = []

[dependencies]
convert                         = { path = "./convert" }
conduit-proxy-controller-grpc   = { path = "./controller-grpc" }
futures-mpsc-lossy              = { path = "./futures-mpsc-lossy" }
conduit-proxy-router            = { path = "./router" }

bytes = "0.4"
domain = "0.2.3"
env_logger = { version = "0.5", default-features = false }
futures = "0.1"
h2 = "0.1"
http = "0.1"
httparse = "1.2"
hyper = { version = "0.11.22", default-features = false, features = ["compat"] }
ipnet = "1.0"
log = "0.4.1"
indexmap = "1.0.0"
rand = "0.4"

tokio-core = "0.1"
tokio-io = "0.1"
tokio-signal = "0.1"

prost = "0.3.0"
prost-types = "0.3.0"

abstract-ns = "0.4"
ns-dns-tokio = "0.4"

#futures-watch   = { git = "https://github.com/carllerche/better-future" }

tokio-connect         = { git = "https://github.com/carllerche/tokio-connect" }
tower                 = { git = "https://github.com/tower-rs/tower" }
tower-balance         = { git = "https://github.com/tower-rs/tower" }
tower-buffer          = { git = "https://github.com/tower-rs/tower" }
tower-discover        = { git = "https://github.com/tower-rs/tower" }
tower-grpc            = { git = "https://github.com/tower-rs/tower-grpc" }
tower-h2              = { git = "https://github.com/tower-rs/tower-h2" }
tower-reconnect       = { git = "https://github.com/tower-rs/tower" }
tower-in-flight-limit = { git = "https://github.com/tower-rs/tower" }
tower-util            = { git = "https://github.com/tower-rs/tower" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
quickcheck = { version = "0.6", default-features = false }
conduit-proxy-controller-grpc = { path = "./controller-grpc" , features = ["arbitrary"] }
