[package]
name = "linkerd-tap-controller"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
linkerd2-proxy-api.workspace = true
opentelemetry-proto = { version = "=0.30.0", default-features = false, features = ["gen-tonic", "trace"] }
prost = "0.13"
prost-types = "0.13"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = "0.13"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = "0.7"
tokio-stream = "0.1"

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator = "0.5"
