[package]
name = "linkerd-tap-controller"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[[bin]]
name = "cli"
path = "bin/cli.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
linkerd2-proxy-api.workspace = true
opentelemetry-proto = { version = "=0.30.0", default-features = false, features = ["gen-tonic", "trace", "with-serde"] }
owo-colors = "4"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = "0.13"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator = "0.5"
