[package]
name = "tower-grpc-examples"
version = "0.1.2"
authors = ["Carl Lerche <me@carllerche.com>"]

[[bin]]
name = "helloworld"
path = "src/helloworld.rs"

[[bin]]
name = "route_guide"
path = "src/routeguide/main.rs"

[dependencies]
futures = "0.1"
bytes = "0.4"
env_logger = "0.4"
log = "0.3"
prost = "0.2"
prost-derive = "0.2"
tokio-core = "0.1"
tower = { git = "https://github.com/tower-rs/tower" }
tower-h2 = { path = "../tower-h2" }
tower-grpc = { path = "../tower-grpc" }

# For the routeguide example
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[build-dependencies]
tower-grpc-build = { path = "../tower-grpc-build" }
