[package]
name = "tower-grpc"
version = "0.1.2"
authors = ["Sean McArthur <sean@seanmonstar.com>"]

[features]
default = ["protobuf"]
protobuf = ["prost"]

[dependencies]
bytes = "0.4"
futures = "0.1"
http = "0.1"
h2 = { git = "https://github.com/carllerche/h2" }
log = "0.3"
tower = { git = "https://github.com/tower-rs/tower" }
tower-h2 = { path = "../tower-h2" }
tower-router = { git = "https://github.com/tower-rs/tower" }

# For protobuf
prost = { version = "0.2", optional = true }

[dev-dependencies]
env_logger = "0.4"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tokio-core = "0.1"

# For examples
prost = "0.2"
prost-derive = "0.2"
