[package]
name = "tower-h2"
version = "0.1.2"
authors = ["Oliver Gould <ver@buoyant.io>"]
description = "Exploring tower + h2"
publish = false

[dependencies]
bytes = "0.4"
futures = "0.1"
h2 = { git = "https://github.com/carllerche/h2" }
http = "0.1"
log = "0.3"
tokio-core = "0.1"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tokio-io = "0.1"
tower = { git = "https://github.com/tower-rs/tower" }

[dev-dependencies]
env_logger = "^0.4.3"
string = { git = "https://github.com/carllerche/string" }
