[package]
name = "linkerd-policy-controller-grpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
http = { workspace = true }
drain = "0.2"
futures = { version = "0.3", default-features = false }
hyper = { workspace = true, features = ["http2", "server"] }
linkerd-policy-controller-core = { path = "../core" }
maplit = "1"
prost-types = "0.13"
tokio = { version = "1", features = ["macros"] }
tonic = { workspace = true }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.linkerd2-proxy-api]
workspace = true
features = ["inbound", "outbound"]
