[workspace]
resolver = "2"
members = [
    "dst-load-controller",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
# Kubernetes
k8s-openapi = { version = "0.23", default-features = false, features = [
    "v1_30",
] }
kube = { version = "0.95", default-features = false, features = [
    "client",
    "rustls-tls",
] }

# gRPC / Linkerd
linkerd2-proxy-api = { git = "https://github.com/linkerd/linkerd2-proxy-api", tag = "v0.14.0" }
tonic = { version = "0.12", default-features = false }
tower = { version = "0.5", default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Metrics
prometheus-client = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
rand = "0.8"
serde = { version = "1", features = ["derive"] }
http = "1"
hyper = "1"
