[package]
name = "linkerd-policy-controller-k8s-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
gateway-api = { workspace = true }
ipnet = { version = "2.11", features = ["json"] }
k8s-openapi = { workspace = true }
schemars = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

[dependencies.kube]
workspace = true
default-features = false
features = [
    "client",
    "derive",
    "runtime",
]
