[package]
name = "linkerd-policy-controller-k8s-index"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
ahash = "0.7"
anyhow = "1"
futures = { version = "0.3", default-features = false }
kubert = { version = "0.5", default-features = false, features = ["index"] }
linkerd-policy-controller-core = { path = "../../core" }
linkerd-policy-controller-k8s-api = { path = "../api" }
parking_lot = "0.12"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tracing = "0.1"

[dev-dependencies]
tokio-stream = "0.1"
tokio-test = "0.4"
tracing-subscriber = "0.3"
