[package]
name = "linkerd-policy-controller-k8s-index"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
ahash = "0.8"
anyhow = "1"
futures = { version = "0.3", default-features = false }
k8s-gateway-api = "0.8"
kubert = { version = "0.12", default-features = false, features = ["index"] }
linkerd-policy-controller-core = { path = "../../core" }
linkerd-policy-controller-k8s-api = { path = "../api" }
parking_lot = "0.12"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tracing = "0.1"

[dev-dependencies]
chrono = { version = "0.4", default-features = false }
maplit = "1"
tokio-stream = "0.1"
tokio-test = "0.4"
tracing-subscriber = "0.3"
