[package]
name = "linkerd-policy-controller-k8s-index"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
ahash = "0.8"
anyhow = "1"
chrono = { version = "0.4.43", default-features = false }
futures = { version = "0.3", default-features = false }
http = { workspace = true }
kubert = { workspace = true, default-features = false, features = ["index"] }
parking_lot = "0.12"
prometheus-client = { workspace = true, default-features = false }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tracing = "0.1"

linkerd-policy-controller-core = { workspace = true }
linkerd-policy-controller-k8s-api = { workspace = true }

[dependencies.kube]
workspace = true
default-features = false
features = [
    "client",
    "derive",
    "runtime",
]

[dev-dependencies]
chrono = { version = "0.4", default-features = false }
k8s-openapi = { workspace = true, features = ["schemars"] }
maplit = "1"
tokio-stream = "0.1"
tokio-test = "0.4"
tracing-subscriber = "0.3"
