[package]
name = "linkerd-policy-controller-k8s-status"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
ahash = "0.8"
anyhow = "1"
# Fix for https://github.com/chronotope/chrono/issues/602
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
kubert = { workspace = true, default-features = false, features = [
    "index",
    "lease",
] }
linkerd-policy-controller-core = { path = "../../core" }
linkerd-policy-controller-k8s-api = { path = "../api" }
parking_lot = "0.12"
prometheus-client = { version = "0.23.0", default-features = false }
serde = "1"
serde_json = "1.0.135"
thiserror = "2"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1"
features = ["macros"]
