[package]
name = "dst-load-controller"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "dst-load-controller"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
linkerd2-proxy-api = { workspace = true }
prometheus-client = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
